version 2015-03-23
      Change to autoload approach

version 2014-07-13
      Include the date phplist processed the bounce

version 2013-08-24
      Initial release for GitHub
      Added bounce reason

version 2013-05-10
    Initial commit