@@ -18,16 +18,16 @@
  */
 $lan = array(
     'plugin_title' => 'Bounce Statistics Plugin',
-    'domain' => 'Domain',
-    'reason' => 'Grund',
-    'users' => 'Abonnenten',
-    'bounce' => 'Bounce ID',
-    'bounce date' => 'Bounce-Datum',
+    'bounce domains' => 'Retouren nach Domain',
+    'bounce reasons' => 'Gründe für Retouren',
+    'bounced users' => 'Abonnenten mit Retouren',
+    'bounce' => 'ID Retoure',
+    'bounce date' => 'Datum Retoure',
     'User email' => 'E-Mail-Adresse',
     'message id' => 'ID Nach-<br />richt',
     'domain name' => 'Domain Name',
-    'bounces' => 'Gesamtzahl Bounces',
-	'bounce count' => 'Anzahl Bounces',
+    'bounces' => 'Gesamtzahl Retouren',
+    'bounce count' => 'Anzahl Retouren',
     'confirmed_heading' => 'Bestät.',
     'not confirmed' => 'unbestätigt',
     'blacklisted_heading' => 'gesp.',
